# OMPReduceBench

./: CMakeLists.txt  install_cmd
cub/device/: CMakeLists.txt  cub.cu
include/: data_types.hpp  utilities.hpp
kokkos/device/: CMakeLists.txt  kokkos.cpp
openmp/device/: CMakeLists.txt  driver.cpp
openmpNew/: CMakeLists.txt
openmpNew/device/: CMakeLists.txt  ompNew.cpp  omp_new_reduce.hpp
openmpNew/device_policies/: CMakeLists.txt  ompNew.cpp  omp_new_reduce.hpp
openmp_new/device/: CMakeLists.txt
raja/device/: CMakeLists.txt  raja.cpp
scripts/: CMakeLists.txt  measure.py  measure.py.in  plot.py
