set(data_types "double;long;int;float")#dim4;dim32")
set(omp_reduction "reduction(+:out);reduction(min:out);reduction(max:out)")
set(oper_util "ADD;MIN;MAX")

set(RAJA_DEPS RAJA)

if (ENABLE_CUDA)
  set(RAJA_DEPS ${RAJA_DEPS} cuda)
  message(STATUS "RAJA DEPS are ${RAJA_DEPS}")
  message(STATUS "RAJA_NVCC_FLAGS:${RAJA_NVCC_FLAGS}")
  message(STATUS "CUDA ROOTKIT is " ${CUDAToolkit_LIBRARY_DIR})
  message(STATUS "CREATING A SYMLINK TO CUDA IS A HACK TO HAVE RAJA BUILD AND LINK")
  execute_process(COMMAND "ln" "-s" "${CUDAToolkit_LIBRARY_DIR}/libcudart.so" "${CMAKE_CURRENT_BINARY_DIR}/libcuda_runtime.so"
                  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
  message(STATUS "ln -s ${CUDAToolkit_LIBRARY_DIR}/libcudart.so ${CMAKE_CURRENT_BINARY_DIR}/libcuda_runtime.so")
endif ()

foreach(dt IN LISTS data_types)
  foreach(ompR op IN ZIP_LISTS omp_reduction oper_util)
    set(REDUCTION_TYPE ${dt})
    set(OMP_REDUCTION ${ompR})
    set(OPER_UTIL ${op})
    set(DEST_SRC_FILE "${CMAKE_CURRENT_BINARY_DIR}/raja_${dt}_${op}.cu")
    set(DEST_BIN_FILE "raja_${dt}_${op}.exe")
    message(STATUS "DT=${dt} Reduction Type=${ompR} operation=${op} ${DEST_SRC_FILE}")
    configure_file(raja.cpp ${DEST_SRC_FILE})
    add_executable(${DEST_BIN_FILE} ${DEST_SRC_FILE})
    target_compile_definitions(${DEST_BIN_FILE} PRIVATE "__RAJA__")
    target_include_directories(${DEST_BIN_FILE} PRIVATE "${CMAKE_SOURCE_DIR}/include")
    target_link_libraries(${DEST_BIN_FILE} PUBLIC RAJA)
    target_link_directories(${DEST_BIN_FILE} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
  endforeach()
endforeach()

